examples/aws/ecs/pce-ecs-fargate-example.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description:
  "PCE ECS Fargate integaration example"

Parameters:
  PceApiKey:
    Description: "PolyScale API key that is enabled for use by PCE."
    Type: String

Resources:
  PceEcsExampleVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  PceEcsExampleSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      VpcId: !Ref PceEcsExampleVpc

  PceEcsExampleRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref PceEcsExampleVpc

  PceEcsExampleInternetGateway:
    Type: "AWS::EC2::InternetGateway"

  PceEcsExampleVPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref PceEcsExampleVpc
      InternetGatewayId: !Ref PceEcsExampleInternetGateway

  PceEcsExampleInternetRoute:
    Type: "AWS::EC2::Route"
    DependsOn:
      - PceEcsExampleInternetGateway
      - PceEcsExampleVPCGatewayAttachment
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref PceEcsExampleInternetGateway
      RouteTableId: !Ref PceEcsExampleRouteTable

  PceEcsSubnetRouteAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PceEcsExampleRouteTable
      SubnetId: !Ref PceEcsExampleSubnet

  PceEcsExampleSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'PCE ECS Fargate integaration example'
      GroupName: PceEcsExampleSecurityGroup
      VpcId: !Ref PceEcsExampleVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 9000
          ToPort: 10000
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

  PceEcsExampleExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: "PceEcsExampleExecutionRole"
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy'

  PceEcsExampleLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: PceEcsExampleLogGroup

  PceEcsExampleCluster:
    Type: 'AWS::ECS::Cluster'
    Properties:
      ClusterName: PceEcsExampleCluster
      CapacityProviders: [ 'FARGATE' ]

  PceEcsExampleService:
   Type: 'AWS::ECS::Service'
   Properties:
      Cluster: !Ref PceEcsExampleCluster
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !Ref PceEcsExampleSubnet
          SecurityGroups:
            - !Ref PceEcsExampleSecurityGroup
      ServiceName: PceEcsExampleService
      TaskDefinition: !Ref PceEcsExampleTaskDefinition

  PceEcsExampleTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      RequiresCompatibilities:
        - FARGATE
      NetworkMode: awsvpc
      Cpu: 256
      Memory: 512
      ExecutionRoleArn: !Ref PceEcsExampleExecutionRole
      ContainerDefinitions:
        - Name: PceEcsExample
          Image: 'ghcr.io/polyscale/pce:stable'
          Environment:
            - Name: PCE_API_KEY
              Value: !Ref PceApiKey
          Memory: 512
          PortMappings:
            - ContainerPort: 9000
              Protocol: tcp
            - ContainerPort: 9001
              Protocol: tcp
            - ContainerPort: 9010
              Protocol: tcp
            - ContainerPort: 9020
              Protocol: tcp
            - ContainerPort: 10000
              Protocol: tcp
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref PceEcsExampleLogGroup
              awslogs-region: "us-east-1"
              awslogs-stream-prefix: "pce-ecs-example"
